Se realizo correccion de la documentacion y se autogenero un javadoc mas completo con documentacion de paquetes y se corrigio una mala practica.